# TapTransit-gateway

./: .env.example  Cargo.toml  README.md  build.rs  diagram.json  sdkconfig.defaults  wokwi.toml
.cargo/: config.toml
src/: api.rs  cache.rs  card_data.rs  main.rs  model.rs  net.rs  pipeline.rs  processor.rs  proto.rs  serial.rs  serial_io.rs  smart_led.rs  state.rs  uart_link.rs  upload.rs  web.rs  web_server.rs
