[package]
name = "tap-transit-idf-gateway"
version = "0.1.0"
authors = ["martin-cao <martincao119@icloud.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "tap-transit-idf-gateway"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = "0.51"
esp-idf-hal = { version = "0.45", features = ["rmt-legacy"] }
embedded-svc = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
embuild = "0.33"
